# docme

./: pyproject.toml  readme.md  requirements.txt
docme/: main.py
