[tool.poetry]
name = "docme"
version = "0.1.0"
description = "A script to clone a GitHub repository and parse its documentation files into markdown for LLM ingestion."
authors = ["Luiz Hemerly <lechemerly@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gitpython = "^3.1.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"